// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-modal renders with a mix of slots and props 1`] = `
<rux-modal modal-title="Title">
  <mock:shadow-root></mock:shadow-root>
  <div slot="message">
    Message
  </div>
  <div slot="footer">
    Footer
  </div>
</rux-modal>
`;

exports[`rux-modal renders with a mix of slots and props 2`] = `
<rux-modal modal-title="Title">
  <mock:shadow-root></mock:shadow-root>
  <div slot="message">
    Message
  </div>
  <div slot="footer">
    Footer
  </div>
</rux-modal>
`;

exports[`rux-modal renders with a mix of slots and props 3`] = `
<rux-modal modal-title="Title">
  <mock:shadow-root></mock:shadow-root>
  <div slot="message">
    Message
  </div>
  <div slot="footer">
    Footer
  </div>
</rux-modal>
`;

exports[`rux-modal renders with slots 1`] = `
<rux-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="header">
    Header
  </span>
  <div slot="message">
    Message
  </div>
  <div slot="footer">
    Footer
  </div>
</rux-modal>
`;

exports[`rux-modal renders with slots 2`] = `
<rux-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="header">
    Header
  </span>
  <div slot="message">
    Message
  </div>
  <div slot="footer">
    Footer
  </div>
</rux-modal>
`;

exports[`rux-modal renders with slots 3`] = `
<rux-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="header">
    Header
  </span>
  <div slot="message">
    Message
  </div>
  <div slot="footer">
    Footer
  </div>
</rux-modal>
`;
